left aligned add swatches message and fix for copy CSS with multiple palettes

--- a/assets/css/color.scss
+++ b/assets/css/color.scss
@@ -202,8 +202,7 @@ header {
             background: #fff;
             border: 1px solid #e6e6e6;
             top: 80px;
-            left: 50%;
-            margin-left: -150px;
+            left: 15px;
             text-align: center;
             line-height: 37px;
         }
